bk_ida/gccida/c3/get_inner_reference
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_inner_reference/src/expr.c:5712:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *pmode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_inner_reference/src/expr.c:5717:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_inner_reference/src/expr.c:5720:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_inner_reference/src/expr.c:5730:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_inner_reference/src/expr.c:5731:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_inner_reference/src/expr.c:5735:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *attributes; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_inner_reference/src/expr.c:5736:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_inner_reference/src/expr.c:5737:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_inner_reference/src/expr.c:5738:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v29; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_inner_reference/src/expr.c:5739:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v30; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_inner_reference/src/expr.c:5740:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_inner_reference/src/expr.c:5741:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_inner_reference/src/expr.c:5742:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v33; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_inner_reference/src/expr.c:5743:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *arg0; // [rsp+0h] [rbp-68h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_inner_reference/src/expr.c:5749:19: error: expected expression
v8 = ( tree_node *)*( &global_trees + 15); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_inner_reference/src/expr.c:5749:8: error: use of undeclared identifier 'tree_node'
v8 = ( tree_node *)*( &global_trees + 15); 
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_inner_reference/src/expr.c:5750:21: error: expected expression
arg0 = ( tree_node *)*( &global_trees + 17); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_inner_reference/src/expr.c:5750:10: error: use of undeclared identifier 'tree_node'
arg0 = ( tree_node *)*( &global_trees + 17); 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_inner_reference/src/expr.c:5791:23: error: expected expression
imag = *( tree_node **)( high + 40); 
                      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_inner_reference/src/obj/expr.o] Error 1
